# skutil

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  versioneer.py
.github/workflows/: release.yml  test.yml
.pytest_cache/v/cache/: nodeids
skutil/: __init__.py  _version.py  metrics.py
skutil/calibration/: __init__.py  calib_clf.py  calib_clf_cv.py
skutil/estimators/: .classifier_map.py.swo  __init__.py  classifier_map.py  col_ignore_clf.py
skutil/feature_selection/: multi_select_percentile.py
skutil/model_selection/: __init__.py  search.py
skutil/preprocessing/: scale.py
src/skutil/: __init__.py  _version.py  metrics.py
src/skutil/calibration/: __init__.py  calib_clf.py  calib_clf_cv.py
src/skutil/estimators/: __init__.py  classifier_map.py  col_ignore_clf.py  regressor_map.py
src/skutil/feature_selection/: multi_select_percentile.py
src/skutil/model_selection/: __init__.py  search.py
src/skutil/preprocessing/: __init__.py  scale.py
tests/: requirements.txt
tests/estimators/: test_classifier_map.py  test_col_ignore_clf.py
tests/model_selection/: test_constrained_param_grid.py
